force-app/main/default/objects/Advisory_Board_Member__c/Advisory_Board_Member__c.object-meta.xml
<CustomObject>
    <label>Advisory Board Membership</label>
    <nameField>
        <displayFormat>AB-{0000}</displayFormat>
        <label>AB Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advisory Board Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>