force-app/main/default/objects/Advisory_Board_Member__c/fields/AB_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>AB_Full_Name__c</fullName>
    <formula>IF( 
ISPICKVAL(Contact__r.AB_Salutation__c , &quot;&quot;)=False 
&amp;&amp; 
ISBLANK(Contact__r.AB_Middle_Name__c )=False 
,TEXT(Contact__r.AB_Salutation__c)&amp;&quot; &quot;&amp; Contact__r.AB_First_Name__c &amp;&quot; &quot;&amp;Contact__r.AB_Middle_Name__c, 

IF( 
ISPICKVAL(Contact__r.AB_Salutation__c, &quot;&quot;)=False 
&amp;&amp; 
ISBLANK(Contact__r.AB_Middle_Name__c)=True 
,TEXT(Contact__r.AB_Salutation__c)&amp;&quot; &quot;&amp;Contact__r.AB_First_Name__c, 

IF( 
ISPICKVAL(Contact__r.AB_Salutation__c, &quot;&quot;)=True 
&amp;&amp; 
ISBLANK(Contact__r.AB_Middle_Name__c)=False 
,Contact__r.AB_First_Name__c&amp;&quot; &quot;&amp;Contact__r.AB_Middle_Name__c 

,Contact__r.AB_First_Name__c))) 

&amp;&quot; &quot;&amp;

IF( 
ISBLANK( Contact__r.AB_Suffix__c )=False 
,Contact__r.AB_Last_Name__c &amp;&quot;, &quot;&amp;Contact__r.AB_Suffix__c 

,Contact__r.AB_Last_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AB Full Name</label>
    <type>Text</type>
</CustomField>