force-app/main/default/objects/Advisory_Board_Member__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The contact record for this Advisory Board member.</description>
    <inlineHelpText
  >The contact record for this Advisory Board member.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Advisory Boards</relationshipLabel>
    <relationshipName>Advisory_Board_Members</relationshipName>
    <type>Lookup</type>
</CustomField>