force-app/main/default/objects/Advisory_Board_Member__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>Contact__r.AB_Department__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AB Department</label>
    <type>Text</type>
</CustomField>