force-app/main/default/objects/Advisory_Board_Member__c/fields/Display_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_First_Name__c</fullName>
    <formula>Contact__r.Display_First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display First Name</label>
    <type>Text</type>
</CustomField>