force-app/main/default/objects/Advisory_Board_Member__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>Contact__r.AB_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AB Email</label>
    <type>Text</type>
</CustomField>