force-app/main/default/objects/Advisory_Board_Member__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description
  >The event that this Advisory Board membership is for.</description>
    <inlineHelpText
  >The event that this Advisory Board membership is for.</inlineHelpText>
    <label>Event or Conference</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>Advisory Board</relationshipLabel>
    <relationshipName>Advisory_Board_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>