force-app/main/default/objects/Advisory_Board_Member__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <formula>Contact__r.AB_First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AB First Name</label>
    <type>Text</type>
</CustomField>