force-app/main/default/objects/Advisory_Board_Member__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <formula>Contact__r.AB_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AB Last Name</label>
    <type>Text</type>
</CustomField>