force-app/main/default/objects/Advisory_Board_Member__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <formula>Contact__r.AB_Organization__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AB Organization</label>
    <type>Text</type>
</CustomField>