force-app/main/default/objects/Advisory_Board_Member__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>Contact__r.AB_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AB Phone</label>
    <type>Text</type>
</CustomField>