force-app/main/default/objects/Advisory_Board_Member__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Contact__r.AB_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AB Title</label>
    <type>Text</type>
</CustomField>