force-app/main/default/objects/Advisory_Board_Member__c/validationRules/Must_Complete_Ad_Bd_Profile.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Complete_Ad_Bd_Profile</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Type__c)||
ISBLANK(Title__c)||
ISBLANK(Organization__c)||
ISBLANK(Contact__c)</errorConditionFormula>
    <errorMessage
  >You must complete the Advisory Board profile for this contact before creating an Advisory Board membership.</errorMessage>
</ValidationRule>